# text-embedding-visualization-dashboard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  otel-collector-config.yaml  pyproject.toml
.github/workflows/: pull-request.yaml
data/: test_data.csv
saved_reductions/: test.pkl  test_params.json
src/preprocessing_scripts/: goemotions.py
src/text_embedding_visualization_dashboard/embeddings/: __init__.py  embeddings.py
src/text_embedding_visualization_dashboard/frontend/: frontend.py  utils.py  visualizations.py
src/text_embedding_visualization_dashboard/frontend/pages/: saved_reductions.py
src/text_embedding_visualization_dashboard/models/: __init__.py  vectordb_models.py
src/text_embedding_visualization_dashboard/utils/: __init__.py  config.py  logger.py  parse_args.py
src/text_embedding_visualization_dashboard/vector_db/: __init__.py  db.py  reduced_embeddings_db.py
tests/: conftest.py  local.env
tests/vectordb/: test_vector_db.py
